# poly-maker

./: .env.example  CLAUDE.md  PLAN_GABAGOOL_STRATEGY.md  RESEARCH.md  RESEARCH_15MIN_STRATEGIES.md  gabagool_positions.json  main.py  pyproject.toml  pytest.ini  redemption.py  trading.py  update_markets.py
.claude/commands/: deploy.md  test.md
alerts/: __init__.py  telegram.py
data_updater/: find_markets.py
db/: __init__.py  pg_client.py  schema.sql  supabase_client.py
deploy/: setup.sh  trading.service  updater.service  webui.service
docs/: INVENTORY_TRACKING_PLAN.md  ONCHAIN_INVENTORY_PLAN.md  ORDER_TRACKING_FIX_PLAN.md  PHASE2_DUAL_TRACKING_PROMPT.md  PHASE3_CONSERVATIVE_LIMITS_PROMPT.md
poly_data/: data_processing.py  data_utils.py  exceptions.py  global_state.py  logging_config.py  polymarket_client.py  retry.py  trading_utils.py  utils.py
poly_merger/: merge.js  redeem.js
rebates/: RESEARCH.md  RESEARCH_ACTIVE_QUOTING.md  __init__.py  config.py  market_finder.py  rebates_bot.py  strategy.py
rebates/active_quoting/: AQ_LOG_ANALYZER.md  __init__.py  alerts.py  bot.py  config.py  event_ledger.py  fill_analytics.py  inventory_manager.py  models.py  momentum_detector.py  onchain_position_provider.py  order_manager.py  orderbook_manager.py  persistence.py  pnl_tracker.py  quote_engine.py  redemption_manager.py  risk_manager.py  user_channel_manager.py
rebates/gabagool/: __init__.py  circuit_breaker.py  config.py  executor.py  monitor.py  position_manager.py  (+4 more)
tests/: __init__.py  conftest.py
tools/: aq_log_analyzer.py
web/: __init__.py  app.py
(+64 files in other folders)
