[project]
name = "poly-maker"
version = "0.1.0"
description = "A market making bot for Polymarket prediction markets"
readme = "README.md"
requires-python = ">=3.9.10"
license = { text = "MIT" }

dependencies = [
    "py-clob-client>=0.34.4",
    "python-dotenv==1.2.1",
    "pandas==2.3.3",
    "gspread==6.2.1",
    "gspread-dataframe==4.0.0",
    "sortedcontainers==2.4.0",
    "eth-account==0.13.7",
    "eth-utils==5.3.1",
    "poly_eip712_structs==0.0.1",
    "py_order_utils==0.3.2",
    "requests==2.32.5",
    "websockets==15.0.1",
    "cryptography==46.0.3",
    "google-auth==2.42.1",
    "web3==7.14.0",
    # New dependencies for PostgreSQL, Telegram, and Web UI
    "psycopg2-binary>=2.9.0",
    "python-telegram-bot>=20.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "pytest==8.2.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "freezegun>=1.2.2",
    "responses>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["poly_data", "poly_stats", "poly_utils", "data_updater", "db", "alerts", "web"]

[tool.black]
line-length = 100
target-version = ["py39"]
